--- a/Na-master/MusicBot-master/package.json
+++ b/Na-master/MusicBot-master/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Even",
-  "description": "Even",
+  "name": "test",
+  "description": "test",
   "version": "0.0.0",
   "main": "bot.js",
   "scripts": {
